@@ -213,6 +213,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #1491431: Fixed distutils.filelist.glob_to_re for edge cases.
+  Initial fix by Wayne Davison.
+
 - Issue #5693: TestSuite.__iter__ can now be consistently overridden in subclasses.
 
 - Issue #5694: removed spurious test output in Distutils (test_clean).
